# lanpartydb-data

./: .gitignore  CONTRIBUTING.md  FORMAT.md  README.md  justfile  pyproject.toml
.github/workflows/: build-data-archive.yml  install-tools.yml  main.yml  validate.yml
data/: series.toml
data/parties/: dagor-net-6.toml  darkfusion.toml  dimension6.toml  federationb.toml  gamers-gathering.toml  knastlan.toml  lanresort-bostalsee-2017.toml  the-zenith.toml
data/parties/MegaFPS/: JanLAN-2025
data/parties/atrlan/: atrlan-2016.toml  atrlan-2017.toml  atrlan-2018.toml  atrlan-2019.toml  atrlan-2022.toml  atrlan-2023.toml
data/parties/bieberlan/: bieberlan-1.toml  bieberlan-10.toml  bieberlan-11.toml  bieberlan-12.toml  bieberlan-13.toml  bieberlan-14.toml  bieberlan-15.toml  bieberlan-16.toml  bieberlan-17.toml  bieberlan-18.toml  bieberlan-19.toml  bieberlan-2.toml  bieberlan-20.toml  bieberlan-21.toml  bieberlan-22.toml  bieberlan-23.toml  bieberlan-24.toml  bieberlan-25.toml  bieberlan-26.toml  bieberlan-27.toml  bieberlan-28.toml  bieberlan-29.toml  bieberlan-3.toml  bieberlan-30.toml  bieberlan-31.toml  bieberlan-32.toml  bieberlan-33.toml  bieberlan-34.toml  bieberlan-35.toml  bieberlan-36.toml  bieberlan-37.toml  bieberlan-38.toml  bieberlan-39.toml  bieberlan-4.toml  bieberlan-40.toml  bieberlan-41.toml  bieberlan-42.toml  bieberlan-43.toml  bieberlan-44.toml  bieberlan-45.toml  (+8 more)
data/parties/bk-lan/: bk-lan-18.toml  bk-lan-xxl-1.toml  bk-lan-xxl-10.toml  bk-lan-xxl-11.toml  (+16 more)
schemas/: party.json  series.json
tools/: check_party_date.py  fetch_contributors.py
(+538 files in other folders)
